finalizando o menu e criando o inicio da hero-area

--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
                 </ul>
                 <a href="" class="rightside">Fazer pedido</a>
             </nav>
+            <div class="menu-mobile">
+                <div class="menu-icon">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
         </div>
     </header>
+    <section class="hero">
+        <div class="container">
+            <div class="leftside">
+                <h1>O Hamburguer <br>mais delicioso! 😋</h1>
+                <p>A primeira hamburgueria virtual que você faz o <br> pedido online e come o burguer através do <br> computador.</p>
+                <a href="" class="button">Fazer pedido</a>
+            </div>
+            <div class="rightside">...</div>
+        </div>
+    </section>
 </body>
 </html>
