--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
             <div class="leftside">
                 <h1>O Hamburguer <br>mais delicioso! 😋</h1>
                 <p>A primeira hamburgueria virtual que você faz o <br> pedido online e come o burguer através do <br> computador.</p>
-                <a href="" class="button">Fazer pedido</a>
+                <div class="button"><a href="">Fazer pedido</a></div>
             </div>
-            <div class="rightside">...</div>
+            <div class="rightside">
+                <img src="assets/images/heroBurger.png" alt="Burguer delicioso">
+            </div>
         </div>
     </section>
 </body>
