finalizando e responsivizando a hero-area

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="leftside">
                 <h1>O Hamburguer <br>mais delicioso! 😋</h1>
                 <p>A primeira hamburgueria virtual que você faz o <br> pedido online e come o burguer através do <br> computador.</p>
-                <div class="button"><a href="">Fazer pedido</a></div>
+                <a href="" class="button">Fazer pedido</a>
             </div>
             <div class="rightside">
                 <img src="assets/images/heroBurger.png" alt="Burguer delicioso">
