criando area search

--- a/index.html
+++ b/index.html
@@ -41,5 +41,25 @@
             </div>
         </div>
     </section>
+    <section class="search">
+        <div class="container">
+            <div class="title">Pesquise o seu <br>Hamburguer favorito!</div>
+            <div class="sides">
+                <div class="leftside">
+                    <input type="search" placeholder="Digite o nome do Burguer">
+                    <!-- Colocanco o "search" vai aparecer uma lupa no teclado dos celulares-->
+                </div>
+                <div class="rightside">
+                    <select name="" id="">
+                        <option value="">Selecionar categoria</option>
+                        <option value="burguers">Burguers</option>
+                        <option value="pizza">Pizza</option>
+                        <option value="vegetariano">Vegetariano</option>
+                        <option value="kids">Kids</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
