finalizando e responsivizando a area do hambuguers

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>B7Burguer</title>
+    <title>B7Burger</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <nav>
                 <ul class="leftside">
                     <li><a href="">Início</a></li>
-                    <li><a href="">Burguers</a></li>
+                    <li><a href="">Burgers</a></li>
                     <li><a href="">Contato</a></li>
                 </ul>
                 <a href="" class="rightside">Fazer pedido</a>
@@ -46,13 +46,13 @@
             <div class="title">Pesquise o seu <br>Hamburguer favorito!</div>
             <div class="sides">
                 <div class="leftside">
-                    <input type="search" placeholder="Digite o nome do Burguer">
+                    <input type="search" placeholder="Digite o nome do Burger">
                     <!-- Colocanco o "search" vai aparecer uma lupa no teclado dos celulares-->
                 </div>
                 <div class="rightside">
                     <select name="" id="">
                         <option value="">Selecionar categoria</option>
-                        <option value="burguers">Burguers</option>
+                        <option value="burguers">Burgers</option>
                         <option value="pizza">Pizza</option>
                         <option value="vegetariano">Vegetariano</option>
                         <option value="kids">Kids</option>
@@ -61,5 +61,72 @@
             </div>
         </div>
     </section>
+    <main>
+        <div class="container">
+            <div class="products-grid">
+                <a href="" class="products-item">
+                    <div class="warning">Promoção</div>
+                    <div class="photo">
+                        <img src="assets/images/burgers/burger1.png" alt="Hamburguer">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <a href="" class="products-item">
+                    <div class="photo">
+                        <img src="assets/images/burgers/burger2.png" alt="Hamburguer">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <a href="" class="products-item">
+                    <div class="photo">
+                        <img src="assets/images/burgers/burger3.png" alt="Hamburguer">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <a href="" class="products-item">
+                    <div class="photo">
+                        <img src="assets/images/burgers/burger1.png" alt="Hamburguer">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <a href="" class="products-item">
+                    <div class="photo">
+                        <img src="assets/images/burgers/burger2.png" alt="Hamburguer">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <a href="" class="products-item">
+                    <div class="photo">
+                        <img src="assets/images/burgers/burger3.png" alt="Hamburguer">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
