--- a/index.html
+++ b/index.html
@@ -128,5 +128,13 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container">
+            <div class="logo">
+                <a href="">B7 <span>•</span> Burguer</a>
+            </div>
+            <div class="info">powered by Samuel L.</div>
+        </div>
+    </footer>
 </body>
 </html>
